syntax="proto3";

package sample.v1;

message Order {
    string order_id = 1;
    repeated LineItem line_items = 2;
}

message LineItem {
    string line_item_id = 1;
    int64 base_price = 2;
    double markup = 3;
    bool is_promo = 4;
    int64 quantity = 5;
    Address address = 6;
}

message Address {
    string detail_address = 1;
    string city = 2;
}
